# pytorch_geometric_test

./: dgcnn_cls.py  loader.py  pyproject.toml  requirements.txt
